Compositor: Crop node prevents moving nodes #62248

Closed
opened 2019-03-06 10:14:29 +01:00 by Michael Klein · 6 comments

System Information
Operating system: Win 10 latest
Graphics card: GTX 1060 latest driver

Blender Version
Broken: blender-2.80.0-git.1df6a98b176f-windows64
Worked: blender-2.79.0-git.1f22e3f311e7-windows64

Short description of error
Once the Crop node is placed it's not possible to select or move the nodes anymore. Changing values works.

Exact steps for others to reproduce the error

  • Switch to "Compositing"
  • Activate "Use Nodes"
  • Add some nodes
  • Add "Crop" node

Result: The four arrow icon will not disappear and you can't move anything

Workaround: Collapsing any other node will bring the arrow cursor back. When you click the "Crop" node you will experience the issue again

**System Information** Operating system: Win 10 latest Graphics card: GTX 1060 latest driver **Blender Version** Broken: blender-2.80.0-git.1df6a98b176f-windows64 Worked: blender-2.79.0-git.1f22e3f311e7-windows64 **Short description of error** Once the Crop node is placed it's not possible to select or move the nodes anymore. Changing values works. **Exact steps for others to reproduce the error** - Switch to "Compositing" - Activate "Use Nodes" - Add some nodes - Add "Crop" node Result: The four arrow icon will not disappear and you can't move anything Workaround: Collapsing any other node will bring the arrow cursor back. When you click the "Crop" node you will experience the issue again
Author

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks
Jeroen Bakker was assigned by Sebastian Parborg 2019-03-06 11:29:40 +01:00
Member

Added subscribers: @ideasman42, @JacquesLucke

Added subscribers: @ideasman42, @JacquesLucke
Member

This is probably more for @campbellbarton. There is a gizmo that does not behave correctly. Could not find the root cause yet.

This is probably more for @campbellbarton. There is a gizmo that does not behave correctly. Could not find the root cause yet.
Member

When the crop node is set and all values (Left, Right, Up and Down are zero) the gizmo thinks it is covering the whole area. Work-around is to set the crop values (one vertical and one horizontal). This way the gizmo does not think it is covering the whole area.

Will check where the crop gizmo is located and have a look. Gizmo is located in node_gizmo.c

When the crop node is set and all values (Left, Right, Up and Down are zero) the gizmo thinks it is covering the whole area. Work-around is to set the crop values (one vertical and one horizontal). This way the gizmo does not think it is covering the whole area. Will check where the crop gizmo is located and have a look. Gizmo is located in `node_gizmo.c`

This issue was referenced by daa4d4dd25

This issue was referenced by daa4d4dd25877c3352d26c6ac89a4cc2e05c10fa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62248
No description provided.